--- a/web/index.html
+++ b/web/index.html
@@ -24,10 +24,10 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="avon_battalion_boys_brigade">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" href="favicon.ico"/>
 
   <title>avon_battalion_boys_brigade</title>
   <link rel="manifest" href="manifest.json">
