--- a/web/index.html
+++ b/web/index.html
@@ -23,13 +23,13 @@
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="avon_battalion_boys_brigade">
+  <meta name="apple-mobile-web-app-title" content="Avon Battalion Boys' Brigade">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
   <!-- Favicon -->
   <link rel="icon" href="favicon.ico"/>
 
-  <title>avon_battalion_boys_brigade</title>
+  <title>Avon Battalion Boys' Brigade</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
